.provarCaches/00D5h000009Q6XQEA0/objects/QCLiveChecks__Scan__c.object
<CustomObject>
    <fields>
        <fullName>QCLiveChecks__Blockers__c</fullName>
        <label>Blockers</label>
        <summaryFilterItems>
            <field>QCLiveChecks__Issue__c.QCLiveChecks__isQualityGatesBreak__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QCLiveChecks__Issue__c.QCLiveChecks__Scan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Issues__c</fullName>
        <label>Issues</label>
        <summaryForeignKey>QCLiveChecks__Issue__c.QCLiveChecks__Scan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__QualityGate__c</fullName>
        <formula>IF(QCLiveChecks__Blockers__c &gt; 0, &quot;NOT PASSED&quot;, &quot;PASSED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Gate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ScanName__c</fullName>
        <label>Scan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__TimeToFixBlockers__c</fullName>
        <label>TimeToFixBlockers</label>
        <summarizedField>QCLiveChecks__Issue__c.QCLiveChecks__TimeToFix__c</summarizedField>
        <summaryFilterItems>
            <field>QCLiveChecks__Issue__c.QCLiveChecks__isQualityGatesBreak__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QCLiveChecks__Issue__c.QCLiveChecks__Scan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__TimeToFixIssues__c</fullName>
        <label>TimeToFixIssues</label>
        <summarizedField>QCLiveChecks__Issue__c.QCLiveChecks__TimeToFix__c</summarizedField>
        <summaryForeignKey>QCLiveChecks__Issue__c.QCLiveChecks__Scan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Scan</label>
    <nameField>
        <displayFormat>QCC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>